...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/lampButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="33dp"
            android:background="@drawable/button_lamp"
...

        <Button
            android:id="@+id/sensorsButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/statisticsButton"
            android:background="@drawable/button_sensors1"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="555dp" />

        <Button
            android:id="@+id/statisticsButton"
...
