<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/setup_activity_container"
    android:background="@drawable/home_bckgrnd"
    tools:context="team.athena.SetupActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ssidText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:text="Setup"
        android:textColor="#fff"
        android:textSize="90dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ssidText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="28dp"
        android:backgroundTint="#ff891c"
        android:ems="25"
        android:hint="Enter your SSID here..."
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/ssidText"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#ff891c"
        android:ems="25"
        android:hint="Enter your password here..."
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssidText" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bckgrnd_btn"
        android:onClick="GetSsidAndPassAndSendGetRequest"
        android:text="Send"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssidText"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
