<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/living_room">


    <Button
        android:id="@+id/graphType_button"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bckgrnd_btn_min"
        android:text="Graph type"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/chart_container"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_318sdp"
        android:layout_below="@+id/buttonDate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#90FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284">

    </FrameLayout>

    <Button
        android:id="@+id/buttonCategory"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/buttonDate"
        android:background="@drawable/bckgrnd_btn_min"
        android:text="Category"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDate2"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bckgrnd_btn_min"
        android:text="Date until"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bckgrnd_btn_min"
        android:text="Date From"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonOdDo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonOdDo"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/bckgrnd_btn_min"
        android:text="Show"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDate2"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/textDate"
        app:layout_constraintTop_toBottomOf="@+id/line_chart"
        app:layout_constraintVertical_bias="0.764" />

    <EditText
        android:id="@+id/textDate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#ff891c"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_chart" />

    <EditText
        android:id="@+id/textDate2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonCategory"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#ff891c"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonDate2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_chart" />

</android.support.constraint.ConstraintLayout>