<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/temperature"
        android:title="Temperature"/>

    <item
        android:id="@+id/humidity"
        android:title="Humidity"/>
</menu>